--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <!--[if IE]>
    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
+  <script src="https://pxl.altcraft.vasily-grishin.lan/ak_container.js?id=MnwxNQ.." ></script>
   <style>
    article, aside, details, figcaption, figure, footer,header,
    hgroup, menu, nav, section { display: block; }
