--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   </style>
  </head>
  <body>
-  <script src="https://pxl.altcraft.vasily-grishin.lan/ak_container.js?id=MnwxNQ.." ></script>
+  <button><<script src="https://pxl.altcraft.vasily-grishin.lan/ak_container.js?id=MnwxNQ.." ></script>
+          style="vertical-align: middle"> Кнопка </button></p>
+  
   <p>Привет, мир</p>
  </body>
 </html>
