--- a/index.html
+++ b/index.html
@@ -13,8 +13,32 @@
   </style>
  </head>
  <body>
-  <button><<script src="https://pxl.altcraft.vasily-grishin.lan/ak_container.js?id=MnwxNQ.." ></script>
-          style="vertical-align: middle"> Кнопка </button></p>
+ <script src="https://pxl.altcraft.vasily-grishin.lan/ak_container.js?id=MnwxNQ.." ></script>
+<!--  <link rel="manifest" href="/manifest.json"></link>-->
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<!--<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script> -->
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script>
+function click(){
+    var akPush = new AKPush()
+    try {
+        console.log("click OK")
+        akPush.initSubscription();
+
+    } catch (e) {
+        console.log("error:",e)
+    }
+}
+function onClick(){
+
+    console.log("click OK")
+    var akPush = new AKPush();
+    akPush.initSubscription();
+}
+</script> 
+<p><input type="button" value="Проверить" onclick="click()"></p>
   
   <p>Привет, мир</p>
  </body>
