--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
  </head>
  <body>
  <script src="https://pxl.altcraft.vasily-grishin.lan/ak_container.js?id=MnwxNQ.." ></script>
+  <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-messaging.js"></script>
 <!--  <link rel="manifest" href="/manifest.json"></link>-->
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <!--<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script> -->
