--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body bgcolor="white">
 <h1>Test Page</h1>
-<script src="https://pxl.daria-markina.dev.altkraft.com/ak_container.js?id=MXwz" ></script>
+<script src="https://pxl.altcraft.vasily-grishin.lan/ak_container.js?id=MnwxNQ.." ></script>
 <!--  <link rel="manifest" href="/manifest.json"></link>-->
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <!--<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script> -->
