--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ function click(){
     }
 }
 function onClick(){
-
+     alert("Hello");
     console.log("click OK")
     var akPush = new AKPush();
     akPush.initSubscription();
