--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script>
+     alert("Hello1");
 function click(){
     var akPush = new AKPush()
     try {
@@ -25,7 +26,7 @@ function click(){
     }
 }
 function onClick(){
-     alert("Hello");
+     alert("Hello2");
     console.log("click OK")
     var akPush = new AKPush();
     akPush.initSubscription();
