--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ function onClick(){
 }
 </script> 
 <p><input type="button" value="Проверить" onclick="click()"></p>
+<p><input type="button" value="Проверить2" onClick="Click()"></p>
+
 
 </body>
 </html>
