--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ function onClick(){
 }
 </script> 
 <p><input type="button" value="Проверить" onclick="click()"></p>
-<p><input type="button" value="Проверить2" onClick="Click()"></p>
+<p><input type="button" value="Проверить2" onclick="onClick()"></p>
 
 
 </body>
