--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <!--<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script> -->
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
+     https://firebase.google.com/docs/web/setup#available-libraries -->  
+     <script type="text/javascript" src="./service-worker.js"></script>
 <script>
+
      alert("Hello1");
 function click(){
      alert("Hello2");
